--- a/compose.yaml
+++ b/compose.yaml
@@ -19,7 +19,7 @@ services:
     ports:
       - 3000:3000
     volumes:
-      - ./backend_app:/backend_app:ro
+      - ./backend_app:/backend_app
       - backend_node_modules:/backend_app/node_modules
 
 volumes:
