add: flask api環境設定追加

--- a/compose.yaml
+++ b/compose.yaml
@@ -22,6 +22,12 @@ services:
       - ./backend_app:/backend_app
       - backend_node_modules:/backend_app/node_modules
 
+  api:
+    build: ./api
+    container_name: api
+    ports:
+      - 5000:5000
+
 volumes:
   auth_data:
   backend_node_modules:
