--- a/compose.yaml
+++ b/compose.yaml
@@ -27,6 +27,13 @@ services:
     container_name: api
     ports:
       - 5000:5000
+    volumes:
+      - ./api/app.py:/app/app.py:ro
+    environment:
+      - FLASK_APP=app.py
+      - FLASK_ENV=development
+      - FLASK_DEBUG=1
+    restart: unless-stopped
 
 volumes:
   auth_data:
