--- a/compose.yaml
+++ b/compose.yaml
@@ -2,12 +2,14 @@ services:
   auth:
     image: quay.io/keycloak/keycloak:26.1
     container_name: auth
-    ports:
-      - 8080:8080
     environment:
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
       KC_HTTP_RELATIVE_PATH: auth
+      KC_HOSTNAME: localhost
+      KC_HOSTNAME_URL: https://localhost/auth
+      # 古い設定を削除し、新しい設定方法を使用
+      KC_PROXY_HEADERS: xforwarded
     command:
       - start-dev
     volumes:
@@ -16,8 +18,6 @@ services:
   backend_app:
     build: ./backend_app
     container_name: backend_app
-    ports:
-      - 3000:3000
     volumes:
       - ./backend_app:/backend_app
       - backend_node_modules:/backend_app/node_modules
@@ -25,15 +25,26 @@ services:
   api:
     build: ./api
     container_name: api
-    ports:
-      - 5000:5000
     volumes:
       - ./api/app.py:/app/app.py:ro
     environment:
       - FLASK_APP=app.py
       - FLASK_ENV=development
       - FLASK_DEBUG=1
-    restart: unless-stopped
+      - AUTH_SERVER_URL=http://auth:8080/auth/
+      - AUTH_REALM_NAME=oidc-test
+      - AUTH_CLIENT_ID=test-client
+      - AUTH_CLIENT_SECRET_KEY=wPqKPUjviWs41KvVRpjLYjwSuSg0RQA4
+
+  proxy:
+    image: nginx:1.27.4
+    container_name: proxy
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./proxy/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./proxy/ssl:/etc/nginx/ssl
 
 volumes:
   auth_data:
