--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -22,28 +22,25 @@ server {
     ssl_session_cache shared:SSL:10m;
     ssl_session_tickets off;
 
-    location /api/ {
-        proxy_pass http://api:5000/api/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
 
     location / {
+        proxy_pass http://app:5173/;
+    }
+
+    location /api/ {
+        proxy_pass http://api:5000/api/;
+    }
+
+    location /back-end/ {
         proxy_pass http://backend_app:3000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location /auth/ {
         proxy_pass http://auth:8080/auth/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
 
         # Keycloak固有の追加設定
         proxy_set_header X-Forwarded-Host $host;
