--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -6,6 +6,12 @@ server {
     return 301 https://$host$request_uri;
 }
 
+
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+}
+
 server {
     listen 443 ssl;
     server_name localhost;
@@ -29,6 +35,11 @@ server {
 
     location / {
         proxy_pass http://app:5173/;
+        proxy_intercept_errors on;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header Upgrade $http_upgrade; 
+        proxy_set_header Connection $connection_upgrade;
     }
 
     location /api/ {
